--- a/Math/Textbooks/Calculus/Calculus-EarlyTranscendentals/08.01.Theory.yml
+++ b/Math/Textbooks/Calculus/Calculus-EarlyTranscendentals/08.01.Theory.yml
@@ -10,117 +10,168 @@ defaults:
   - CET-08-FurtherApplicationsOfIntegration
   - CET-08.01-ArcLength
   markdownTabLength: 2
+  stringTemplDelim: ¢
 notes:
-- id: 1577650205267
+- id: 1590600443633
+  fields:
+    Front: |
+      CET-08.01-00 Theory:
+      #### Further Applications of Integration
+      ##### Arc Length
+      List the arc-length definitions and theorems.
+    Back: |
+      Def: **curve length**
+      Thm: **Arc Length Formula**
+      Def: **smooth**
+    Annotations: ''
+  tags:
+  - Definitions
+  - Theorems
+- id: 1590600260734
   media:
-  - path: ${file_dir}/images/CET-08.01-01.Th.1.jpg
+  - path: ¢{file_dir}/images/CET-08.01-01.Th.1.jpg
   fields:
     Front: |
       CET-08.01-01 Theory:
-      Define the **length $L$ of the curve $C$ with equation $y=f(x),$ $a \leqslant x \leqslant b.$**
-    Back: >
-      We obtain a polygonal approximation to $C$ by dividing the interval $[a, b]$
-      into $n$ subintervals with endpoints $x_{0}, x_{1}, \ldots, x_{n}$ and equal
-      width $\Delta x .$ If $y_{i}=f\left(x_{i}\right),$ then the point $P_{i}\left(x_{i},
-      y_{i}\right)$ lies on $C$ and the polygon with vertices $P_{0}, P_{1}, \ldots,
-      P_{n},$ illustrated below, is an approximation to $C .$
+      #### Further Applications of Integration
+      ##### Arc Length
+      Define **curve length**. List its hypotheses.
+    Back: |
+      Suppose curve $C$ has equation $y=f(x),$ $a \leqslant x \leqslant b.$ We obtain a polygonal approximation to $C$ by dividing the interval $[a, b]$ into $n$ subintervals with endpoints $x_{0}, x_{1}, \ldots, x_{n}$ and equal width $\Delta x .$ If $y_{i}=f\left(x_{i}\right),$ then the point $P_{i}\left(x_{i}, y_{i}\right)$ lies on $C$ and the polygon with vertices $P_{0}, P_{1}, \ldots, P_{n},$ illustrated below, is an approximation to $C .$ 
+      <p align="center"> 
+      ![](CET-08.01-01.Th.1.jpg) 
+      </p> 
+      The length $L$ of $C$ is approximately the length of this polygon and the approximation gets better as we let $n$ increase. Therefore we define the length $L$ of the curve $C$ with equation $y=f(x)$ $a \leqslant x \leqslant b,$ as the limit of the lengths of these inscribed polygons (if the limit exists):
+      $$ 
+      L=\lim _{n \rightarrow \infty} \sum_{i=1}^{n}\left|P_{i-1} P_{i}\right|=\lim_{n \rightarrow \infty} \sum_{i=1}^{n} \sqrt{1+\left[f^{\prime}\left(x_{i}^{*}\right)\right]^{2}} \Delta x 
+      $$
 
-      <p align="center">
+      Hypotheses:
 
-      ![](CET-08.01-01.Th.1.jpg)
-
-      </p>
-
-      The length $L$ of $C$ is approximately the length of this polygon and the approximation
-      gets better as we let $n$ increase. Therefore we define the length $L$ of the
-      curve $C$ with equation $y=f(x)$ $a \leqslant x \leqslant b,$ as the limit of
-      the lengths of these inscribed polygons (if the limit exists):
-
-      $$$
-
-      L=\lim _{n \rightarrow \infty} \sum_{i=1}^{n}\left|P_{i-1} P_{i}\right|=\lim
-      _{n \rightarrow \infty} \sum_{i=1}^{n} \sqrt{1+\left[f^{\prime}\left(x_{i}^{*}\right)\right]^{2}}
-      \Delta x
-
-      $$$
+      - $\lim_{n \rightarrow \infty} \sum_{i=1}^{n} \sqrt{1+\left[f^{\prime}\left(x_{i}^{*}\right)\right]^{2}} \Delta x$ exists.
     Annotations: ''
-  tags: []
-- id: 1577650449775
+  tags:
+  - Definition
+- id: 1590603142558
   fields:
     Front: |
       CET-08.01-02 Theory:
-      State the **Arc Length Formula.**
+      #### Further Applications of Integration
+      ##### Arc Length
+      Define **smooth**. List its hypotheses.
     Back: |
-      If $f^{\prime}$ is continuous on $[a, b]$, then the length of the curve $y=f(x), a \leqslant x \leqslant b,$ is
-      $$$
-      L=\int_{a}^{b} \sqrt{1+\left[f^{\prime}(x)\right]^{2}} d x
-      $$$ If we use Leibniz notation for derivatives, we can write the arc length formula as follows:
-      $$$
-      L=\int_{a}^{b} \sqrt{1+\left(\frac{d y}{d x}\right)^{2}} d x
-      $$$
+      A function $f(x)$ having a continuous derivative is called **smooth** because a small change in $x$ produces a small change in $f^{\prime}(x).$ The curve $C$ given by $y=f(x)$ is then also called **smooth**.
+
+      Hypotheses:
+
+      - $f^{\prime}$ is continuous on $[a, b].$
     Annotations: ''
-  tags: []
-- id: 1577651631270
+  tags:
+  - Definition
+- id: 1590603259783
   fields:
     Front: |
       CET-08.01-03 Theory:
-      If a curve has the equation $x=g(y),$ $c \leqslant y \leqslant d,$ and $g^{\prime}(y)$ is continuous, state the corresponding **Arc Length Formula.**
+      #### Further Applications of Integration
+      ##### Arc Length
+      State the **Arc Length Formula.** List its hypotheses.
     Back: |
-      $$$
-      L=\int_{c}^{d} \sqrt{1+\left[g^{\prime}(y)\right]^{2}} d y=\int_{c}^{d} \sqrt{1+\left(\frac{d x}{d y}\right)^{2}} d y
-      $$$
+      If $f^{\prime}$ is continuous on $[a, b]$, then the length of the curve $y=f(x),$ $a \leqslant x \leqslant b,$ is
+      $$
+      L=\int_{a}^{b} \sqrt{1+\left[f^{\prime}(x)\right]^{2}} d x
+      $$ If we use Leibniz notation for derivatives, we can write the arc length formula as follows:
+      $$
+      L=\int_{a}^{b} \sqrt{1+\left(\frac{d y}{d x}\right)^{2}} d x
+      $$
+
+      Hypotheses:
+
+      - $f$ is smooth on $[a, b].$
     Annotations: ''
-  tags: []
-- id: 1577652308345
+  tags:
+  - Theorem
+- id: 1590603447583
   fields:
     Front: |
       CET-08.01-04 Theory:
-      State the **arc length function.**
-    Back: >
-      If a smooth curve $C$ has the equation $y=f(x),$ $a \leqslant x \leqslant b,$
-      let $s(x)$ be the distance along $C$ from the initial point $P_{0}(a, f(a))$
-      to the point $Q(x, f(x)) .$ Then $s$ is a function, called the are length function,
-      and
+      #### Further Applications of Integration
+      ##### Arc Length
+      If a curve has the equation $x=g(y),$ $c \leqslant y \leqslant d,$ state the corresponding **Arc Length Formula.** List its hypotheses.
+    Back: |
+      If $g^{\prime}$ is continuous on $[c, d]$, then the length of the curve $x=g(y),$ $c \leqslant y \leqslant d,$ is
+      $$
+      L=\int_{c}^{d} \sqrt{1+\left[g^{\prime}(y)\right]^{2}} d y=\int_{c}^{d} \sqrt{1+\left(\frac{d x}{d y}\right)^{2}} d y
+      $$
 
-      $$$
+      Hypotheses:
 
-      s(x) = \int_{a}^{x} \sqrt{1+\left[f^{\prime}(t)\right]^{2}} d t
-
-      $$$ (We have replaced the variable of integration by $t$ so that $x$ does not
-      have two meanings.)
+      - $g$ is smooth on $[c, d].$
     Annotations: ''
-  tags: []
-- id: 1577652540520
+  tags:
+  - Theorem
+- id: 1590603671158
   fields:
     Front: |
       CET-08.01-05 Theory:
-      What is the rate of change of the arc length function?
+      #### Further Applications of Integration
+      ##### Arc Length
+      ###### The Arc Length Function
+      State the **Arc Length Function.** List its hypotheses.
     Back: |
-      $$$
-      \frac{d s}{d x}=\sqrt{1+\left[f^{\prime}(x)\right]^{2}}=\sqrt{1+\left(\frac{d y}{d x}\right)^{2}}
-      $$$
+      If a smooth curve $C$ has the equation $y=f(x),$ $a \leqslant x \leqslant b,$ let $s(x)$ be the distance along $C$ from the initial point $P_{0}(a, f(a))$ to the point $Q(x, f(x)) .$ Then $s$ is a function, called the are length function, and 
+      $$ 
+      s(x) = \int_{a}^{x} \sqrt{1+\left[f^{\prime}(t)\right]^{2}} d t 
+      $$ (We have replaced the variable of integration by $t$ so that $x$ does not have two meanings.)
+
+      Hypotheses:
+
+      - $f$ is smooth on $[a,b]$.
     Annotations: ''
-  tags: []
-- id: 1577652655296
+  tags:
+  - Theorem
+- id: 1590603748784
   fields:
     Front: |
       CET-08.01-06 Theory:
+      #### Further Applications of Integration
+      ##### Arc Length
+      ###### The Arc Length Function
+      What is the rate of change of the arc length function?
+    Back: |
+      $$
+      \frac{d s}{d x}=\sqrt{1+\left[f^{\prime}(x)\right]^{2}}=\sqrt{1+\left(\frac{d y}{d x}\right)^{2}}
+      $$
+    Annotations: ''
+  tags:
+  - Theorem
+- id: 1590603749183
+  fields:
+    Front: |
+      CET-08.01-07 Theory:
+      #### Further Applications of Integration
+      ##### Arc Length
+      ###### The Arc Length Function
       What is the minimum the rate of change of the arc length function? When is this minimum attained?
     Back: |
       The rate of change of $s$ with respect to $x$ is always at least 1 and is equal to 1 when $f^{\prime}(x),$ the slope of the curve, is $0 .$
     Annotations: ''
-  tags: []
-- id: 1577652775746
+  tags:
+  - Theorem
+- id: 1590603801134
   fields:
     Front: |
-      CET-08.01-07 Theory:
+      CET-08.01-08 Theory:
+      #### Further Applications of Integration
+      ##### Arc Length
+      ###### The Arc Length Function
       What is the differential of arc length?
     Back: |
-      $$$
+      $$
       d s=\sqrt{1+\left(\frac{d y}{d x}\right)^{2}} d x
-      $$$ This equation is sometimes written in the symmetric form
-      $$$
+      $$ This equation is sometimes written in the symmetric form
+      $$
       (d s)^{2}=(d x)^{2}+(d y)^{2}
-      $$$
+      $$
     Annotations: ''
-  tags: []
+  tags:
+  - Theorem
