--- a/Math/Textbooks/Calculus/Calculus-EarlyTranscendentals/08.02.Theory.yml
+++ b/Math/Textbooks/Calculus/Calculus-EarlyTranscendentals/08.02.Theory.yml
@@ -12,34 +12,56 @@ defaults:
   markdownTabLength: 2
   stringTemplDelim: ¢
 notes:
-- id: 1577658108845
+- id: 1590605228713
+  fields:
+    Front: |
+      CET-08.02-00 Theory:
+      #### Further Applications of Integration
+      ##### Area of a Surface of Revolution
+      List the revolution-surface-area definitions and theorems.
+    Back: |
+      Thm: _unnamed_ **circular cylinder band area formula**
+      Thm: _unnamed_ **cone lateral area formula**
+      Thm: _unnamed_ **cone band area formula**
+      Thm: **Riemann approximation to revolution surface area**
+      Def: **revolution surface area**
+    Annotations: ''
+  tags:
+  - Definitions
+  - Theorems
+- id: 1590605468158
   fields:
     Front: |
       CET-08.02-01 Theory:
-      Give the band area $A$ of a cylinder of height $h$ and radius $r.$
+      State the _unnamed_ **circular cylinder band area formula**.
     Back: |
+      The band area $A$ of a cylinder of height $h$ and radius $r$ is
       $$
       A = 2 \pi r h
       $$
     Annotations: ''
-  tags: []
-- id: 1577658284219
+  tags:
+  - Theorem
+- id: 1590605965834
   fields:
     Front: |
       CET-08.02-02 Theory:
-      Give the band area $A$ of a cone of radius $r$ and slant height $l$.
+      State the _unnamed_ **cone lateral area formula**.
     Back: |
+      The lateral area $A$ of a cone of radius $r$ and slant height $l$ is
       $$
       A = \pi r l
       $$
     Annotations: ''
-  tags: []
-- id: 1577659233271
+  tags:
+  - Theorem
+- id: 1590606136709
   fields:
     Front: |
       CET-08.02-03 Theory:
-      Give the area $A$ of a cone band with slant height $l$ and upper and lower radii $r_1$ and $r_2$.
+      State the _unnamed_ **cone band area formula**.
     Back: |
+      The area $A$ of a cone band with slant height $l$ and upper and lower radii $r_1$ and $r_2$ is
       $$
       A = \pi (r_1 l + r_2 l) = \pi (r_1 + r_2) l
       $$ or
@@ -47,27 +69,30 @@ notes:
       A = 2 \pi r l \quad\text{where}\quad r = \tfrac{1}{2}(r_1 + r_2)
       $$
     Annotations: ''
-  tags: []
-- id: 1577660076492
+  tags:
+  - Theorem
+- id: 1590606535012
   fields:
     Front: |
       CET-08.02-04 Theory:
-      Give the Riemann approximation to the area of the complete surface of revolution.
+      Give the **Riemann approximation to revolution surface area**.
     Back: |
       $$
       \sum_{i=1}^{n} 2 \pi f\left(x_{i}^{*}\right) \sqrt{1+\left[f^{\prime}\left(x_{i}^{*}\right)\right]^{2}} \Delta x
       $$
     Annotations: ''
-  tags: []
-- id: 1577661069946
+  tags:
+  - Theorem
+- id: 1590607303013
   media:
   - path: ¢{file_dir}/images/CET-08.02-05.Th.1.jpg
   - path: ¢{file_dir}/images/CET-08.02-05.Th.2.jpg
   fields:
     Front: |
       CET-08.02-05 Theory:
-      Define the surface area of the surface obtained by rotating the curve $y=f(x),$ $a \leqslant x \leqslant b,$ about the $x$-axis, in the case where $f$ is positive and has a continuous derivative.
+      Define **revolution surface area**. List its hypotheses.
     Back: |
+      Suppose $f(x)$ is positive and has a continuous derivative on $[a, b].$ The surface area of the surface obtained by rotating the curve $y=f(x)$ about the $x$-axis is given by
       $$
       S=\int_{a}^{b} 2 \pi f(x) \sqrt{1+\left[f^{\prime}(x)\right]^{2}} d x
       $$ With the Leibniz notation for derivatives, this formula becomes
@@ -85,15 +110,25 @@ notes:
       $$ using the differential notation for arc length
       $$
       d s=\sqrt{1+\left(\frac{d y}{d x}\right)^{2}} d x \quad\text{or}\quad d s=\sqrt{1+\left(\frac{d x}{d y}\right)^{2}} d y
-      $$ These formulas can be remembered by thinking of $2 \pi y$ or $2 \pi x$ as the circumference of a circle traced out by the point $(x, y)$ on the curve as it is rotated about the $x$ -axis or $y$ -axis, respectively (see below).
+      $$ These formulas can be remembered by thinking of $2 \pi y$ or $2 \pi x$ as the circumference of a circle traced out by the point $(x, y)$ on the curve as it is rotated about the $x$-axis or $y$-axis, respectively (see below).
       <p align="center">
       ![](CET-08.02-05.Th.1.jpg)
-      Rotation about $x$ -axis: $S=\int 2 \pi y d s$
+      _Rotation about $x$-axis: $S=\int 2 \pi y d s.$_
       </p>
       <p align="center">
       ![](CET-08.02-05.Th.2.jpg)
-      Rotation about $y$ -axis: $S=\int 2 \pi x d s$
+      _Rotation about $y$-axis: $S=\int 2 \pi x d s.$_
       </p>
+
+      Hypotheses:
+
+      - $f(x)$ is positive on $[a, b].$
+      - $f^{\prime}(x)$ is continuous on $[a, b].$
+
+      If the curve is given by $x = g(y)$ on $[c, d]$ then
+
+      - $g(y)$ is positive on $[c, d].$
+      - $g^{\prime}(y)$ is continuous on $[c, d].$
     Annotations: ''
   tags:
-  - Editing
+  - Definition
