--- a/Math/Textbooks/Calculus/Calculus-EarlyTranscendentals/templates/Synthesis.yml
+++ b/Math/Textbooks/Calculus/Calculus-EarlyTranscendentals/templates/Synthesis.yml
@@ -1,26 +1,59 @@
 - id: 0
-  skip: true
   fields:
     Front: |
-      CET-XX.XX-XX Synthesis Notes:
-      ##### Summary of definitions:
-      ##### Summary of theorems:
-    Back: |
-    Annotations: ''
-  tags: []
-
-  media:
-  - path: ¢{file_dir}/images/CET-XX.XX-XX.Sy.1.jpg
-      <p align="center">
-      ![](CET-XX.XX-XX.Sy.1.jpg)
-      </p>
-  tags: []
-- id: 0
-  fields:
-    Front: |
-      CET-XX.XX-XX Synthesis:
-      ##### Conic Sections
+      CET-XX.XX-XX Theory:
+      #### Further Applications of Integration
+      ##### Applications to Physics and Engineering
+      List the XX definitions and theorems.
     Back: |
     Annotations: ''
   tags:
+  - Definitions
+  - Theorems
+  - Editing
+
+  media:
+  - path: ¢{file_dir}/images/CET-XX.XX-XX.Th.1.jpg
+      <p align="center">
+      ![](CET-XX.XX-XX.Th.1.jpg)
+      </p>
+- id: 0
+  fields:
+    Front: |
+      CET-XX.XX-XX Theory:
+      #### Further Applications of Integration
+      ##### Applications to Physics and Engineering
+      Define . List its hypotheses.
+    Back: |
+      X
+
+      Hypotheses:
+
+      - 
+    Annotations: ''
+  tags:
+  - Definition
+  - Editing
+
+  media:
+  - path: ¢{file_dir}/images/CET-XX.XX-XX.Th.1.jpg
+      <p align="center">
+      ![](CET-XX.XX-XX.Th.1.jpg)
+      </p>
+- id: 0
+  fields:
+    Front: |
+      CET-XX.XX-XX Theory:
+      #### Further Applications of Integration
+      ##### Applications to Physics and Engineering
+      State the . List its hypotheses.
+    Back: |
+      X
+
+      Hypotheses:
+
+      - 
+    Annotations: ''
+  tags:
+  - Theorem
   - Editing
